feat: add verify register candidates API
