# docs/swagger.yaml
@@ -509,6 +509,27 @@ paths:
       summary: Install Monitoring
       tags:
       - Thanos Stack
+  /stacks/thanos/{id}/register-candidates:
+    post:
+      consumes:
+      - application/json
+      description: Register Candidates
+      parameters:
+      - description: Thanos Stack ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Response'
+      summary: Register Candidates
+      tags:
+      - Thanos Stack
   /stacks/thanos/{id}/resume:
     post:
       consumes:
